# Rtx

./: .gitignore  CMakeLists.txt  README.md  base.h  graphics.cpp  graphics.h  main.cpp  models.cpp  models.h  movement.cpp  movement.h
base/: base.cpp  base.h
graphics/: graphics.cpp  graphics.h
models/: models.cpp  models.h
movement/: movement.cpp  movement.h
shaders/: fullscreen.vert  ray_tracer.frag  to_gamma.frag
